Changed spacing in the footer between 2026 and HelpingHand. Changed file names to correct ones in .html

--- a/MyWebPage.css
+++ b/MyWebPage.css
@@ -198,6 +198,7 @@ footer p {
 footer .logo {
   cursor: default;
   font-size: 14px;
+  margin-left: 6px;
 }
 
 .tech-stack {
